--- a/es.html
+++ b/es.html
@@ -1,15 +1,248 @@
+<!-- stuff to include:
+    - discord
+    - calendar
+    - membership sign up form
+    - about us 
+    - executive board
+    - upcoming events
+    - our programs
+    - funded by
+    - social medias
+    - reasons to become a member
+    - instagram feed
+    - -->
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
-  <link rel="shortcut icon" type="image/png" href="/images/ydsa_star.png">
+  <link rel="shortcut icon" type="image/png" href="images/ydsa_star.png">
   <title>YDSA @ FIU - ES</title>
 </head>
-<body>
-  <script src="index.js"></script>
 
+<body>
+  <div class="header">
+    <div class="logo">
+      <img id="logopic" src="images/ydsa_logo.png" alt="">
+    </div>
+    <div class="title">
+      <h1 id="ydsa">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</h1>
+      <h1 id="fiu">FLORIDA INTERNATIONAL UNIVERSITY</h1>
+    </div>
+  </div>
+  <div class="content">
+    <button onclick="window.location.href='#about'" class="btn">Sobre Nosotros</button>
+    <button onclick="window.location.href='#our_programs'" class="btn">Nuestros Programas</button>
+    <button onclick="window.location.href='#upcoming_events'" class="btn">Próximos Eventos</button>
+    <button onclick="window.location.href='#membership_perks'" class="btn">Beneficios de Membresía</button>
+    <button onclick="window.location.href='#executive_board' " class="btn">Junta Ejecutiva</button>
+    <button onclick="window.location.href='#social_medias'" class="btn">Redes Sociales</button>
+    <a href="https://calendar.google.com/calendar/u/4?cid=Zml1eWRzYUBnbWFpbC5jb20" target="_blank"><button
+        class="btn">Calendario</button></a>
+    <a href="mailto: fiuydsa@gmail.com"><button class="btn">Contacta Con Nosotros</button></a>
+  </div>
+  <div class="join">
+    <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON NOSOTROS!</button></a>
+  </div>
+  <div id="image_color">
+    <div id="ig_name">
+      <div class="iglogo">
+        <a href="https://www.instagram.com/ydsafiu" target="_blank"><img id="igpic"
+            src="images/new-instagram-logo-white-border-icon-png-large.png" alt=""></a>
+      </div>
+      <div class="igtitle">
+        <a style="text-decoration: none;" href="https://www.instagram.com/ydsafiu" target="_blank">
+          <h1 id="igydsa">INSTAGRAM</h1>
+        </a>
+      </div>
+    </div>
+    <div id="image_size">
+      <div id="slider">
+        <figure id="insta">
+        </figure>
+      </div>
+    </div>
+  </div>
+  <div id="about">
+    <h1>SOBRE NOSOTROS</h1>
+    <div id="aboutus">
+      <p>Somos un capítulo/sección de estudiantes y jóvenes de los Socialistas Democráticos de América (DSA) y una organización nacional de capítulos universitarios reconocidos con varios cientos de organizadores. Somos el capítulo hermano de Miami-DSA, centrado en Florida International University. Somos estudiantes organizándonos en nuestras universidades, colegios y escuelas secundarias para luchar por el cambio inmediato para los trabajadores y estudiantes mientras desarrollamos nuestra capacidad para luchar por cambios más radicales y estructurales.<br><br>Como organización que está siguiendo los pasos de DSA y los movimientos socialistas del pasado, somos incondicionalmente antifascistas, antirracistas, antiimperialistas y anticapitalistas.<br><br> Trabajamos con campañas laborales para organizar a los trabajadores estudiantiles del personal, defendiendo a los inmigrantes a través de campañas para los campus santuario, despojando a nuestras escuelas de combustibles fósiles, trabajo contra la pobreza a través de programas locales de ayuda mutua en nuestras comunidades y mucho más.<br><br>YDSA @ FIU lucha por el socialismo democrático a través de la educación política y campañas activas para mejorar la vida de los trabajadores.</p>
+    </div>
+    <img id="ydsalogo2" src="images/ydsa_logo.png" alt="">
+  </div>
+  <div id="joinus2">
+    <div class="join">
+      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON NOSOTROS!</button></a>
+    </div>
+  </div>
+  <div id="our_programs">
+    <h1 id="programs">
+      NUESTROS PROGRAMAS
+    </h1>
+    <img src="images/spring2022 ig post1.jpg" alt="">
+    <div>"Film Fridays" es nuestro programa quincenal presentado por nuestro director de comunicaciones, Josue, donde proyectamos una película con temas de izquierda y luego discutimos la película. Los eventos incluyen una breve presentación previa al espectáculo que proporciona contexto, así como una lente política para ver la película. ¡Únase con nosotros para votar la película que se proyectará!<br><br><br><br><br><br><br><br><br><br><br></div>
+    <div>"In Conversation" es nuestro programa de educación política de curso intensivo mensual presentado por nuestro presidente
+    de Educación Política, Jacob-Alexander. Revisamos una pieza de literatura socialista, con el propósito de brindar una
+    breve y comprensible introducción a la teoría política. Tomando la forma de un círculo socrático, abordaremos el tema a
+    través de la conversación y la discusión, incorporando el texto en el desarrollo de nuestro propio pensamiento. ¡No se
+    necesitan conocimientos previos!<br><br><br> <br> <br><br><br></div>
+    <div>Siguiendo los pasos de los movimientos socialistas del pasado, creemos y practicamos la teoría de la ayuda mutua; una
+    forma de participación política en la que las personas asumen la responsabilidad de cuidarse unos a otros y de cambiar
+    las condiciones políticas. "Solidaridad, no caridad". Con el esfuerzo de nuestros copresidentes de ayuda mutua, Emma y
+    Oscar ofrecen a los miembros la oportunidad de trabajar juntos durante el semestre para ayudar a otros a través de
+    alimentos, ropa y campañas médicas en asociación con Miami DSA y organizaciones afines, así como organizando
+    participación en protestas y acción política directa. ¡Esperamos que se una con nosotros para ayudar a nuestra comunidad!</div>
+  </div>
+  <div id="upcoming_events">
+    <h1 id="upcoming">
+      PRÓXIMOS EVENTOS
+    </h1>
+    <div id="event_images">próximamente...</div>
+  </div>
+  <div id="membership_perks">
+    <h1 id="membership">
+      BENEFICIOS DE MEMBRESIA
+    </h1>
+    <span>
+      <div>
+        <li>¡Accede a nuestro Discord!</li>
+      </div> <img id="discord_img" src="images/discord-logo-png-7617.png" alt="">
+    </span>
+    <span>
+      <div>
+        <li id="text">¡Acceso a nuestro WhatsApp Groupchat!</li>
+      </div> <img id="whatsapp_img" src="images/580b57fcd9996e24bc43c543.png" alt="">
+    </span>
+    <span>
+      <div>
+        <li>¡Vota por la película que se proyectará en "Film Fridays"!</li>
+      </div><img id="film_fridays_logo" src="images/film fridays logo.jpg" alt="">
+    </span>
+  </div>
+  <div id="joinus3">
+    <div class="join">
+      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON NOSOTROS!</button></a>
+    </div>
+  </div>
+  <div id="executive_board">
+    <h1 id="executive">JUNTA EJECUTIVA</h1>
+    <div id="adam">
+      <span>
+        <h2>
+          Adam
+        </h2>
+        <h3>
+          Presidente de YDSA @ FIU
+        </h3>
+      </span>
+      <span>
+        <img src="images/adam (1).png" alt="">
+      </span>
+    </div>
+    <div id="emma">
+      <span>
+        <img src="images/emma (1).jpg" alt="">
+      </span>
+      <span>
+        <h2>
+          Emma
+        </h2>
+        <h3>
+          Vicepresidenta de YDSA @ FIU <br> Copresidenta de Ayuda Mutua de YDSA @ FIU
+        </h3>
+      </span>
+    </div>
+    <div id="jacob">
+      <span>
+        <h2>
+          Jacob-Alexander
+        </h2>
+        <h3>
+          Presidente de Educación Política de YDSA @ FIU <br> Director de "In Conversation"
+        </h3>
+      </span>
+      <span>
+        <img src="images/jacob.jpg" alt="">
+      </span>
+    </div>
+    <div id="oscar">
+      <span>
+        <img src="images/oscar.jpg" alt="">
+      </span>
+      <span>
+        <h2>
+          Oscar
+        </h2>
+        <h3>
+          Copresidente de Ayuda Mutua de YDSA @ FIU
+        </h3>
+      </span>
+    </div>
+    <div id="robin">
+      <span>
+        <h2>
+          Robin
+        </h2>
+        <h3>
+          Representante RSO de YDSA @ FIU
+        </h3>
+      </span>
+      <span>
+        <img src="images/robin (1).jpg" alt="">
+      </span>
+    </div>
+    <div id="mauricio">
+      <span>
+        <img src="images/mauricio.png" alt="">
+      </span>
+      <span>
+        <h2>
+          Mauricio
+        </h2>
+        <h3>
+          Tesorero de YDSA @ FIU
+        </h3>
+      </span>
+    </div>
+    <div id="josue">
+      <span>
+        <h2>
+          Josue
+        </h2>
+        <h3>
+          Director de Comunicaciones de YDSA @ FIU <br>Director de "Film Fridays"
+        </h3>
+      </span>
+      <span>
+        <img src="images/josue.png" alt="">
+      </span>
+    </div>
+  </div>
+  <div id="joinus2">
+    <div class="join">
+      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON NOSOTROS!!</button></a>
+    </div>
+  </div>
+  <div id="social_medias">
+    <div id="social">
+      <a href="https://instagram.com/ydsafiu" target="_blank">
+        <img id="ig" src="images/Instagram-logo-transparent-PNG (1).png" alt="">
+      </a>
+      <a href="https://facebook.com/ydsafiu" target="_blank">
+        <img id="fb" src="images/Facebook logo 2021.png" alt="">
+      </a>
+      <a href="https://twitter.com/ydsafiu" target="_blank">
+        <img id="twitter" src="images/logo-twitter-png-5860.png" alt="">
+      </a>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
+  <script src="insta.js"></script>
+  <script src="index.js"></script>
 </body>
+
 </html>
