--- a/en.html
+++ b/en.html
@@ -64,7 +64,7 @@
   <div id="about">
     <h1>ABOUT US</h1>
     <div id="aboutus">  
-      <p>We are a student and youth chapter/section of Democratic Socialists of America (DSA) and a national organization of recognized campus chapters and several hundred organizers. We are the sister chapter of Miami-DSA, centered in Florida International University. We are students organizing in our universities, colleges, and high schools to fight for the immediate change for workers and students while building our capacity to fight for more radical and structural changes.<br><br> As an organization that is following in the steps of DSA and past socialist movements, we staunchly are anti-fascist, anti-racist, anti-imperialist, and anti-capitalist.<br><br> We work with labor campaigns to organize student workers of staff, defending immigrants through campaigns for sanctuary campuses, divesting our schools from fossil fuels, anti-poverty work through local mutual aid programs in our communities, and much much more. <br><br>YDSA-FIU fights for democratic socialism through political education and active campaigns to improve the lives of working people.</p>
+      <p>We are a student and youth chapter/section of Democratic Socialists of America (DSA) and a national organization of recognized campus chapters with several hundred organizers. We are the sister chapter of Miami-DSA, centered in Florida International University. We are students organizing in our universities, colleges, and high schools to fight for the immediate change for workers and students while building our capacity to fight for more radical and structural changes.<br><br> As an organization that is following in the steps of DSA and past socialist movements, we staunchly are anti-fascist, anti-racist, anti-imperialist, and anti-capitalist.<br><br> We work with labor campaigns to organize student workers of staff, defending immigrants through campaigns for sanctuary campuses, divesting our schools from fossil fuels, anti-poverty work through local mutual aid programs in our communities, and much much more. <br><br>YDSA @ FIU fights for democratic socialism through political education and active campaigns to improve the lives of working people.</p>
     </div>
     <img id="ydsalogo2"src="images/ydsa_logo.png" alt="">
   </div>
@@ -94,7 +94,7 @@
     </h1>
     <span><div> <li>Access to our Discord server!</li>  </div> <img id="discord_img" src="images/discord-logo-png-7617.png" alt=""></span>
     <span> <div> <li id="text">Access to our WhatsApp Groupchat!</li> </div> <img id="whatsapp_img" src="images/580b57fcd9996e24bc43c543.png" alt=""></span>
-    <span> <div> <li>Vote for what movie gets to be screened for Film Fridays!</li> </div><img id="film_fridays_logo" src="images/film fridays logo.jpg" alt=""></span>
+    <span> <div> <li>Vote for what movie gets to be screened for "Film Fridays!"</li> </div><img id="film_fridays_logo" src="images/film fridays logo.jpg" alt=""></span>
   </div>
   <div id="joinus3"><div class="join">
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
