--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="whole_logo" id="buttons">
         <a href="en.html"><button id="language">English</button></a>
         <a href="es.html"><button id="language">Español</button></a>
-        <a href="ht.html"><button id="language">Kreyòl ayisyen</button></a>
+        <!-- <a href="ht.html"><button id="language">Kreyòl ayisyen</button></a> -->
       </div>
     </div>
     <script src="language.js"></script>
