--- a/es.html
+++ b/es.html
@@ -152,7 +152,7 @@
           Emma
         </h2>
         <h3>
-          Vicepresidenta de YDSA @ FIU <br> Copresidenta de Ayuda Mutua de YDSA @ FIU
+          Vicepresidenta<br> Copresidenta de Ayuda Mutua
         </h3>
       </span>
     </div>
@@ -162,7 +162,7 @@
           Jacob-Alexander
         </h2>
         <h3>
-          Presidente de Educación Política de YDSA @ FIU <br> Director de "In Conversation"
+          Presidente de Educación Política <br> Director de "In Conversation"
         </h3>
       </span>
       <span>
@@ -178,7 +178,7 @@
           Oscar
         </h2>
         <h3>
-          Copresidente de Ayuda Mutua de YDSA @ FIU
+          Copresidente de Ayuda Mutua
         </h3>
       </span>
     </div>
