--- a/en.html
+++ b/en.html
@@ -86,7 +86,7 @@
     <h1 id="upcoming">
       UPCOMING EVENTS
     </h1>
-    <div id="event_images">coming soon...</div>
+    <img id="gbm1" src="images/gbm1.jpg" alt="">
   </div>
   <div id="membership_perks">
     <h1 id="membership">
