--- a/en.html
+++ b/en.html
@@ -72,7 +72,7 @@
     <h1 id="upcoming">
       UPCOMING EVENTS
     </h1>
-    <img id="gbm1" src="images/gbm1.jpg" alt="">
+    <a href="https://forms.gle/EyJRimkgajEN2FC26" target="_blank"><img id="gbm1" src="images/gbm1.jpg" alt=""></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
