--- a/en.html
+++ b/en.html
@@ -73,6 +73,7 @@
       UPCOMING EVENTS
     </h1>
     <a href="https://forms.gle/EyJRimkgajEN2FC26" target="_blank"><img id="gbm1" src="images/gbm1.jpg" alt=""></a>
+    <img id="tabling" src="images/tabling.jpg" alt="">
   </div>
   <div id="membership_perks">
     <h1 id="membership">
