upcoming events spanish

--- a/es.html
+++ b/es.html
@@ -87,7 +87,8 @@
     <h1 id="upcoming">
       PRÓXIMOS EVENTOS
     </h1>
-    <div id="event_images">próximamente...</div>
+    <a href="https://forms.gle/EyJRimkgajEN2FC26" target="_blank"><img id="gbm1" src="images/gbm1.jpg" alt=""></a>
+    <img id="tabling" src="images/tabling.jpg" alt="">
   </div>
   <div id="membership_perks">
     <h1 id="membership">
