--- a/en.html
+++ b/en.html
@@ -163,7 +163,7 @@
           Mauricio
         </h2>
         <h3>
-          Treasurer of YDSA @ FIU
+          Secretary of YDSA @ FIU
         </h3>
       </span>
     </div>
