--- a/es.html
+++ b/es.html
@@ -191,7 +191,7 @@
           Mauricio
         </h2>
         <h3>
-          Tesorero de YDSA @ FIU
+          Secretario de YDSA @ FIU
         </h3>
       </span>
     </div>
