--- a/en.html
+++ b/en.html
@@ -25,7 +25,7 @@
     <button onclick="window.location.href='#membership_perks'" class="btn">Membership Perks</button>
     <button onclick="window.location.href='#executive_board' " class="btn">Executive Board</button>
     <button onclick="window.location.href='#social_medias'" class="btn">Social Medias</button>
-    <a href="https://calendar.google.com/calendar/u/4?cid=Zml1eWRzYUBnbWFpbC5jb20" target="_blank"><button class="btn">Calendar</button></a>
+    <a href="https://calendar.google.com/calendar/embed?src=fiuydsa%40gmail.com&ctz=America%2FNew_York" target="_blank"><button class="btn">Calendar</button></a>
     <a href="mailto: fiuydsa@gmail.com"><button class="btn">Contact Us</button></a>
   </div>
   <div class="join">
