--- a/es.html
+++ b/es.html
@@ -87,8 +87,13 @@
     <h1 id="upcoming">
       PRÓXIMOS EVENTOS
     </h1>
+    <h2 id="rsvp">
+      ¡Haz clic en la imagen para confirmar tu asistencia!
+    </h2>
     <a href="https://forms.gle/EyJRimkgajEN2FC26" target="_blank"><img id="gbm1" src="images/gbm1.jpg" alt=""></a>
-    <img id="tabling" src="images/tabling.jpg" alt="">
+    <a href="https://forms.gle/67zzknnTxUZsGEiE6" target="_blank"><img id="mix" src="images/mixtape.jpg" alt=""></a>
+    <a href="https://forms.gle/YohCCFM2hSzwAPzFA" target="_blank"><img id="real" src="images/in_conversation_01_graphic.jpg"
+        alt=""></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
