--- a/en.html
+++ b/en.html
@@ -201,6 +201,21 @@
         <img id="twitter"src="images/logo-twitter-png-5860.png" alt="">
       </a></div>
   </div>
+  <div class="loader-wrapper" id="loader-wrapper">
+    <span class="loader">
+      <span class="loader-inner">
+        <img src="images/ydsa_star.png" class="rotate" width="100" height="100">
+      </span>
+    </span>
+  </div>
+  <script>
+    setTimeout(function () {
+        var loader = document.getElementById("loader-wrapper");
+        loader.style.transition = '.5s';
+        loader.style.opacity = '0';
+        loader.style.visibility = 'hidden';
+      }, 1250);
+  </script>
   <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
   <script src="insta.js"></script>
   <script src="index.js"></script>
