--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
         <!-- <a href="ht.html"><button id="language">Kreyòl ayisyen</button></a> -->
       </div>
     </div>
+    <div class="loader-wrapper" id="loader-wrapper">  
+      <span class="loader">
+        <span class="loader-inner">
+          <img src="images/ydsa_star.png" class="rotate" width="100" height="100">
+        </span>
+      </span>
+    </div>
+    <script>
+      setTimeout(function () {
+          var loader = document.getElementById("loader-wrapper");
+          loader.style.transition = '.5s';
+          loader.style.opacity = '0';
+          loader.style.visibility = 'hidden';
+        }, 1250);
+    </script>
     <script src="language.js"></script>
   </body>
 </html>
