links back to home page

--- a/es.html
+++ b/es.html
@@ -13,11 +13,11 @@
 <body>
   <div class="header">
     <div class="logo">
-      <img id="logopic" src="images/ydsa_logo.png" alt="">
+      <a href="index.html"><img id="logopic" src="images/ydsa_logo.png" alt=""></a>
     </div>
     <div class="title">
-      <h1 id="ydsa">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</h1>
-      <h1 id="fiu">FLORIDA INTERNATIONAL UNIVERSITY</h1>
+      <a href="index.html"><h1 id="ydsa">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</h1></a>
+      <a href="index.html"><h1 id="fiu">FLORIDA INTERNATIONAL UNIVERSITY</h1></a>
     </div>
   </div>
   <div class="content">
