--- a/en.html
+++ b/en.html
@@ -31,6 +31,11 @@
   <div class="join">
     <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
   </div>
+  <div class="auto-resizable-iframe">
+    <div>
+      <iframe frameborder="0" allowfullscreen="" src="https://www.youtube.com/embed/XRES4mm-k7w"></iframe>
+    </div>
+  </div>
   <div id="image_color">
     <div id="ig_name">
       <div class="iglogo">
