--- a/en.html
+++ b/en.html
@@ -80,8 +80,8 @@
         Click Image to RSVP!
       </h2>
     </h1>
-    <a href="https://forms.gle/YohCCFM2hSzwAPzFA" target="_blank"><img id="mix" src="images/in_conversation_01_graphic.jpg" alt=""></a>
-    <a href="https://forms.gle/ahPTe21kwgRud3AA9" target="_blank"><img id="real" src="images/psycho.jpg" alt=""></a>
+    <a href="https://forms.gle/ahPTe21kwgRud3AA9" target="_blank"><img id="mix" src="images/psycho.jpg" alt=""></a>
+    <a href="https://forms.gle/qDGjbVYFWjB7yUfx9" target="_blank"><img id="real" src="images/gbm2.jpg" alt=""></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
