--- a/es.html
+++ b/es.html
@@ -95,9 +95,8 @@
     <h2 id="rsvp">
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
-    <a href="https://forms.gle/YohCCFM2hSzwAPzFA" target="_blank"><img id="mix" src="images/in_conversation_01_graphic.jpg"
-        alt=""></a>
-    <a href="https://forms.gle/ahPTe21kwgRud3AA9" target="_blank"><img id="real" src="images/psycho.jpg" alt=""></a>
+    <a href="https://forms.gle/ahPTe21kwgRud3AA9" target="_blank"><img id="mix" src="images/psycho.jpg" alt=""></a>
+    <a href="https://forms.gle/qDGjbVYFWjB7yUfx9" target="_blank"><img id="real" src="images/gbm2.jpg" alt=""></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
