--- a/en.html
+++ b/en.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,24 +9,30 @@
   <link rel="shortcut icon" type="image/png" href="images/ydsa_star.png">
   <title>YDSA @ FIU - EN</title>
 </head>
+
 <body>
   <div class="header">
     <div class="logo">
       <a href="index.html"><img id="logopic" src="images/ydsa_logo.png" alt=""></a>
     </div>
     <div class="title">
-      <a href="index.html"><h1 id="ydsa">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</h1></a>
-      <a href="index.html"><h1 id="fiu">FLORIDA INTERNATIONAL UNIVERSITY</h1></a>
+      <a href="index.html">
+        <h1 id="ydsa">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</h1>
+      </a>
+      <a href="index.html">
+        <h1 id="fiu">FLORIDA INTERNATIONAL UNIVERSITY</h1>
+      </a>
     </div>
   </div>
   <div class="content">
     <button onclick="window.location.href='#about'" class="btn">About Us</button>
-    <button onclick="window.location.href='#our_programs'"class="btn">Our Programs</button>
+    <button onclick="window.location.href='#our_programs'" class="btn">Our Programs</button>
     <button onclick="window.location.href='#upcoming_events'" class="btn">Upcoming Events</button>
     <button onclick="window.location.href='#membership_perks'" class="btn">Membership Perks</button>
     <button onclick="window.location.href='#executive_board' " class="btn">Executive Board</button>
     <button onclick="window.location.href='#social_medias'" class="btn">Social Medias</button>
-    <a href="https://calendar.google.com/calendar/embed?src=fiuydsa%40gmail.com&ctz=America%2FNew_York" target="_blank"><button class="btn">Calendar</button></a>
+    <a href="https://calendar.google.com/calendar/embed?src=fiuydsa%40gmail.com&ctz=America%2FNew_York"
+      target="_blank"><button class="btn">Calendar</button></a>
     <a href="mailto: fiuydsa@gmail.com"><button class="btn">Contact Us</button></a>
   </div>
   <div class="join">
@@ -39,10 +46,13 @@
   <div id="image_color">
     <div id="ig_name">
       <div class="iglogo">
-        <a href="https://www.instagram.com/ydsafiu" target="_blank"><img id="igpic" src="images/new-instagram-logo-white-border-icon-png-large.png" alt=""></a>
+        <a href="https://www.instagram.com/ydsafiu" target="_blank"><img id="igpic"
+            src="images/new-instagram-logo-white-border-icon-png-large.png" alt=""></a>
       </div>
       <div class="igtitle">
-        <a style="text-decoration: none;" href="https://www.instagram.com/ydsafiu" target="_blank"><h1 id="igydsa">INSTAGRAM</h1></a>
+        <a style="text-decoration: none;" href="https://www.instagram.com/ydsafiu" target="_blank">
+          <h1 id="igydsa">INSTAGRAM</h1>
+        </a>
       </div>
     </div>
     <div id="image_size">
@@ -54,24 +64,45 @@
   </div>
   <div id="about">
     <h1>ABOUT US</h1>
-    <div id="aboutus">  
-      <p>We are a student and youth chapter/section of Democratic Socialists of America (DSA) and a national organization of recognized campus chapters with several hundred organizers. We are the sister chapter of Miami-DSA, centered in Florida International University. We are students organizing in our universities, colleges, and high schools to fight for the immediate change for workers and students while building our capacity to fight for more radical and structural changes.<br><br> As an organization that is following in the steps of DSA and past socialist movements, we staunchly are anti-fascist, anti-racist, anti-imperialist, and anti-capitalist.<br><br> We work with labor campaigns to organize student workers of staff, defending immigrants through campaigns for sanctuary campuses, divesting our schools from fossil fuels, anti-poverty work through local mutual aid programs in our communities, and much much more. <br><br>YDSA @ FIU fights for democratic socialism through political education and active campaigns to improve the lives of working people.</p>
+    <div id="aboutus">
+      <p>We are a student and youth chapter/section of Democratic Socialists of America (DSA) and a national
+        organization of recognized campus chapters with several hundred organizers. We are the sister chapter of
+        Miami-DSA, centered in Florida International University. We are students organizing in our universities,
+        colleges, and high schools to fight for the immediate change for workers and students while building our
+        capacity to fight for more radical and structural changes.<br><br> As an organization that is following in the
+        steps of DSA and past socialist movements, we staunchly are anti-fascist, anti-racist, anti-imperialist, and
+        anti-capitalist.<br><br> We work with labor campaigns to organize student workers of staff, defending immigrants
+        through campaigns for sanctuary campuses, divesting our schools from fossil fuels, anti-poverty work through
+        local mutual aid programs in our communities, and much much more. <br><br>YDSA @ FIU fights for democratic
+        socialism through political education and active campaigns to improve the lives of working people.</p>
     </div>
-    <img id="ydsalogo2"src="images/ydsa_logo.png" alt="">
+    <img id="ydsalogo2" src="images/ydsa_logo.png" alt="">
   </div>
   <div id="joinus2">
     <div class="join">
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
     </div>
-  </div>  
+  </div>
   <div id="our_programs">
     <h1 id="programs">
       OUR PROGRAMS
     </h1>
     <img src="images/spring2022 ig post1.jpg" alt="">
-    <div>"Film Fridays" is our bi-weekly program hosted by our communications director, Josue, where we screen a movie with leftist themes and discuss the movie afterwards. The events include a short pre-show presentation providing context as well as a political lens to view the movie through. Join us to vote on the movie that gets screened!<br><br><br><br><br><br><br><br><br><br><br></div>
-    <div>"In Conversation" is our monthly crash-course political education program hosted by our Political Education chair, Jacob-Alexander. We review a piece of socialist literature, with the purpose of providing a short, comprehensible introduction to political theory. Taking the form of a socratic circle, we will engage the topic through conversation and discussion, incorporating the text into the development of our own thought. No prior knowledge is needed!<br><br><br> <br> <br><br><br></div>
-    <div>Following in the steps of past socialists movements, we believe and practice the theory of mutual aid; a form of political participation in which people take responsibility for caring for one another and changing political conditions. "Solidarity, not charity". Endeavored by our mutual-aid co-chairs, Emma and Oscar offer members a chance to work together throughout the semester in helping others by way of food, clothing, and medical drives in partnership with Miami DSA and like-minded organizations, as well as organizing participation in protests and direct political action. We hope you join us in helping out our community!</div>
+    <div>"Film Fridays" is our bi-weekly program hosted by our communications director, Josue, where we screen a movie
+      with leftist themes and discuss the movie afterwards. The events include a short pre-show presentation providing
+      context as well as a political lens to view the movie through. Join us to vote on the movie that gets
+      screened!<br><br><br><br><br><br><br><br><br><br><br></div>
+    <div>"In Conversation" is our monthly crash-course political education program hosted by our Political Education
+      chair, Jacob-Alexander. We review a piece of socialist literature, with the purpose of providing a short,
+      comprehensible introduction to political theory. Taking the form of a socratic circle, we will engage the topic
+      through conversation and discussion, incorporating the text into the development of our own thought. No prior
+      knowledge is needed!<br><br><br> <br> <br><br><br></div>
+    <div>Following in the steps of past socialists movements, we believe and practice the theory of mutual aid; a form
+      of political participation in which people take responsibility for caring for one another and changing political
+      conditions. "Solidarity, not charity". Endeavored by our mutual-aid co-chairs, Emma and Oscar offer members a
+      chance to work together throughout the semester in helping others by way of food, clothing, and medical drives in
+      partnership with Miami DSA and like-minded organizations, as well as organizing participation in protests and
+      direct political action. We hope you join us in helping out our community!</div>
   </div>
   <div id="upcoming_events">
     <h1 id="upcoming">
@@ -80,18 +111,31 @@
         Click Image to RSVP!
       </h2>
     </h1>
-    <a href="https://forms.gle/ahPTe21kwgRud3AA9" target="_blank"><img id="mix" src="images/psycho.jpg" alt=""></a>
     <a href="https://forms.gle/qDGjbVYFWjB7yUfx9" target="_blank"><img id="real" src="images/gbm2.jpg" alt=""></a>
+    <a href="https://forms.gle/qAXF3yRM2yqymyMm9" target="_blank"><img id="mix" src="images/grave.jpg" alt=""></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
       MEMBERSHIP PERKS
     </h1>
-    <span><div> <li>Access to our Discord server!</li>  </div> <img id="discord_img" src="images/discord-logo-png-7617.png" alt=""></span>
-    <span> <div> <li id="text">Access to our WhatsApp Groupchat!</li> </div> <img id="whatsapp_img" src="images/580b57fcd9996e24bc43c543.png" alt=""></span>
-    <span> <div> <li>Vote for what movie gets to be screened for "Film Fridays!"</li> </div><img id="film_fridays_logo" src="images/film fridays logo.jpg" alt=""></span>
+    <span>
+      <div>
+        <li>Access to our Discord server!</li>
+      </div> <img id="discord_img" src="images/discord-logo-png-7617.png" alt="">
+    </span>
+    <span>
+      <div>
+        <li id="text">Access to our WhatsApp Groupchat!</li>
+      </div> <img id="whatsapp_img" src="images/580b57fcd9996e24bc43c543.png" alt="">
+    </span>
+    <span>
+      <div>
+        <li>Vote for what movie gets to be screened for "Film Fridays!"</li>
+      </div><img id="film_fridays_logo" src="images/film fridays logo.jpg" alt="">
+    </span>
   </div>
-  <div id="joinus3"><div class="join">
+  <div id="joinus3">
+    <div class="join">
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
     </div>
   </div>
@@ -203,8 +247,9 @@
         <img id="fb" src="images/Facebook logo 2021.png" alt="">
       </a>
       <a href="https://twitter.com/ydsafiu" target="_blank">
-        <img id="twitter"src="images/logo-twitter-png-5860.png" alt="">
-      </a></div>
+        <img id="twitter" src="images/logo-twitter-png-5860.png" alt="">
+      </a>
+    </div>
   </div>
   <div class="loader-wrapper" id="loader-wrapper">
     <span class="loader">
@@ -215,14 +260,15 @@
   </div>
   <script>
     setTimeout(function () {
-        var loader = document.getElementById("loader-wrapper");
-        loader.style.transition = '.5s';
-        loader.style.opacity = '0';
-        loader.style.visibility = 'hidden';
-      }, 1250);
+      var loader = document.getElementById("loader-wrapper");
+      loader.style.transition = '.5s';
+      loader.style.opacity = '0';
+      loader.style.visibility = 'hidden';
+    }, 1250);
   </script>
   <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
   <script src="insta.js"></script>
   <script src="index.js"></script>
 </body>
+
 </html>
