--- a/es.html
+++ b/es.html
@@ -16,8 +16,12 @@
       <a href="index.html"><img id="logopic" src="images/ydsa_logo.png" alt=""></a>
     </div>
     <div class="title">
-      <a href="index.html"><h1 id="ydsa">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</h1></a>
-      <a href="index.html"><h1 id="fiu">FLORIDA INTERNATIONAL UNIVERSITY</h1></a>
+      <a href="index.html">
+        <h1 id="ydsa">YOUNG DEMOCRATIC SOCIALISTS OF AMERICA</h1>
+      </a>
+      <a href="index.html">
+        <h1 id="fiu">FLORIDA INTERNATIONAL UNIVERSITY</h1>
+      </a>
     </div>
   </div>
   <div class="content">
@@ -27,12 +31,13 @@
     <button onclick="window.location.href='#membership_perks'" class="btn">Beneficios de Membresía</button>
     <button onclick="window.location.href='#executive_board' " class="btn">Junta Ejecutiva</button>
     <button onclick="window.location.href='#social_medias'" class="btn">Redes Sociales</button>
-    <a href="https://calendar.google.com/calendar/embed?src=fiuydsa%40gmail.com&ctz=America%2FNew_York" target="_blank"><button
-        class="btn">Calendario</button></a>
+    <a href="https://calendar.google.com/calendar/embed?src=fiuydsa%40gmail.com&ctz=America%2FNew_York"
+      target="_blank"><button class="btn">Calendario</button></a>
     <a href="mailto: fiuydsa@gmail.com"><button class="btn">Contacta Con Nosotros</button></a>
   </div>
   <div class="join">
-    <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON NOSOTROS!</button></a>
+    <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON
+        NOSOTROS!</button></a>
   </div>
   <div class="auto-resizable-iframe">
     <div>
@@ -61,13 +66,25 @@
   <div id="about">
     <h1>SOBRE NOSOTROS</h1>
     <div id="aboutus">
-      <p>Somos un capítulo/sección de estudiantes y jóvenes de los Socialistas Democráticos de América (DSA) y una organización nacional de capítulos universitarios reconocidos con varios cientos de organizadores. Somos el capítulo hermano de Miami-DSA, centrado en Florida International University. Somos estudiantes organizándonos en nuestras universidades, colegios y escuelas secundarias para luchar por el cambio inmediato para los trabajadores y estudiantes mientras desarrollamos nuestra capacidad para luchar por cambios más radicales y estructurales.<br><br>Como organización que está siguiendo los pasos de DSA y los movimientos socialistas del pasado, somos incondicionalmente antifascistas, antirracistas, antiimperialistas y anticapitalistas.<br><br> Trabajamos con campañas laborales para organizar a los trabajadores estudiantiles del personal, defendiendo a los inmigrantes a través de campañas para los campus santuario, despojando a nuestras escuelas de combustibles fósiles, trabajo contra la pobreza a través de programas locales de ayuda mutua en nuestras comunidades y mucho más.<br><br>YDSA @ FIU lucha por el socialismo democrático a través de la educación política y campañas activas para mejorar la vida de los trabajadores.</p>
+      <p>Somos un capítulo/sección de estudiantes y jóvenes de los Socialistas Democráticos de América (DSA) y una
+        organización nacional de capítulos universitarios reconocidos con varios cientos de organizadores. Somos el
+        capítulo hermano de Miami-DSA, centrado en Florida International University. Somos estudiantes organizándonos en
+        nuestras universidades, colegios y escuelas secundarias para luchar por el cambio inmediato para los
+        trabajadores y estudiantes mientras desarrollamos nuestra capacidad para luchar por cambios más radicales y
+        estructurales.<br><br>Como organización que está siguiendo los pasos de DSA y los movimientos socialistas del
+        pasado, somos incondicionalmente antifascistas, antirracistas, antiimperialistas y anticapitalistas.<br><br>
+        Trabajamos con campañas laborales para organizar a los trabajadores estudiantiles del personal, defendiendo a
+        los inmigrantes a través de campañas para los campus santuario, despojando a nuestras escuelas de combustibles
+        fósiles, trabajo contra la pobreza a través de programas locales de ayuda mutua en nuestras comunidades y mucho
+        más.<br><br>YDSA @ FIU lucha por el socialismo democrático a través de la educación política y campañas activas
+        para mejorar la vida de los trabajadores.</p>
     </div>
     <img id="ydsalogo2" src="images/ydsa_logo.png" alt="">
   </div>
   <div id="joinus2">
     <div class="join">
-      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON NOSOTROS!</button></a>
+      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON
+          NOSOTROS!</button></a>
     </div>
   </div>
   <div id="our_programs">
@@ -75,18 +92,29 @@
       NUESTROS PROGRAMAS
     </h1>
     <img src="images/spring2022 ig post1.jpg" alt="">
-    <div>"Film Fridays" es nuestro programa quincenal presentado por nuestro director de comunicaciones, Josue, donde proyectamos una película con temas de izquierda y luego discutimos la película. Los eventos incluyen una breve presentación previa al espectáculo que proporciona contexto, así como una lente política para ver la película. ¡Únase con nosotros para votar la película que se proyectará!<br><br><br><br><br><br><br><br><br><br><br></div>
-    <div>"In Conversation" es nuestro programa de educación política de curso intensivo mensual presentado por nuestro presidente
-    de Educación Política, Jacob-Alexander. Revisamos una pieza de literatura socialista, con el propósito de brindar una
-    breve y comprensible introducción a la teoría política. Tomando la forma de un círculo socrático, abordaremos el tema a
-    través de la conversación y la discusión, incorporando el texto en el desarrollo de nuestro propio pensamiento. ¡No se
-    necesitan conocimientos previos!<br><br><br> <br> <br><br><br></div>
-    <div>Siguiendo los pasos de los movimientos socialistas del pasado, creemos y practicamos la teoría de la ayuda mutua; una
-    forma de participación política en la que las personas asumen la responsabilidad de cuidarse unos a otros y de cambiar
-    las condiciones políticas. "Solidaridad, no caridad". Con el esfuerzo de nuestros copresidentes de ayuda mutua, Emma y
-    Oscar ofrecen a los miembros la oportunidad de trabajar juntos durante el semestre para ayudar a otros a través de
-    alimentos, ropa y campañas médicas en asociación con Miami DSA y organizaciones afines, así como organizando
-    participación en protestas y acción política directa. ¡Esperamos que se una con nosotros para ayudar a nuestra comunidad!</div>
+    <div>"Film Fridays" es nuestro programa quincenal presentado por nuestro director de comunicaciones, Josue, donde
+      proyectamos una película con temas de izquierda y luego discutimos la película. Los eventos incluyen una breve
+      presentación previa al espectáculo que proporciona contexto, así como una lente política para ver la película.
+      ¡Únase con nosotros para votar la película que se proyectará!<br><br><br><br><br><br><br><br><br><br><br></div>
+    <div>"In Conversation" es nuestro programa de educación política de curso intensivo mensual presentado por nuestro
+      presidente
+      de Educación Política, Jacob-Alexander. Revisamos una pieza de literatura socialista, con el propósito de brindar
+      una
+      breve y comprensible introducción a la teoría política. Tomando la forma de un círculo socrático, abordaremos el
+      tema a
+      través de la conversación y la discusión, incorporando el texto en el desarrollo de nuestro propio pensamiento.
+      ¡No se
+      necesitan conocimientos previos!<br><br><br> <br> <br><br><br></div>
+    <div>Siguiendo los pasos de los movimientos socialistas del pasado, creemos y practicamos la teoría de la ayuda
+      mutua; una
+      forma de participación política en la que las personas asumen la responsabilidad de cuidarse unos a otros y de
+      cambiar
+      las condiciones políticas. "Solidaridad, no caridad". Con el esfuerzo de nuestros copresidentes de ayuda mutua,
+      Emma y
+      Oscar ofrecen a los miembros la oportunidad de trabajar juntos durante el semestre para ayudar a otros a través de
+      alimentos, ropa y campañas médicas en asociación con Miami DSA y organizaciones afines, así como organizando
+      participación en protestas y acción política directa. ¡Esperamos que se una con nosotros para ayudar a nuestra
+      comunidad!</div>
   </div>
   <div id="upcoming_events">
     <h1 id="upcoming">
@@ -95,8 +123,8 @@
     <h2 id="rsvp">
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
-    <a href="https://forms.gle/ahPTe21kwgRud3AA9" target="_blank"><img id="mix" src="images/psycho.jpg" alt=""></a>
     <a href="https://forms.gle/qDGjbVYFWjB7yUfx9" target="_blank"><img id="real" src="images/gbm2.jpg" alt=""></a>
+    <a href="https://forms.gle/qAXF3yRM2yqymyMm9" target="_blank"><img id="mix" src="images/grave.jpg" alt=""></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
@@ -120,7 +148,8 @@
   </div>
   <div id="joinus3">
     <div class="join">
-      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON NOSOTROS!</button></a>
+      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON
+          NOSOTROS!</button></a>
     </div>
   </div>
   <div id="executive_board">
@@ -219,7 +248,8 @@
   </div>
   <div id="joinus2">
     <div class="join">
-      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON NOSOTROS!!</button></a>
+      <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON
+          NOSOTROS!!</button></a>
     </div>
   </div>
   <div id="social_medias">
