mauricio pic change

--- a/en.html
+++ b/en.html
@@ -208,7 +208,7 @@
     </div>
     <div id="mauricio">
       <span>
-        <img src="images/mauricio.png" alt="">
+        <img src="images/adam (1).png" alt="">
       </span>
       <span>
         <h2>
