--- a/en.html
+++ b/en.html
@@ -155,7 +155,7 @@
     </div>
     <div id="emma">
       <span>
-        <img src="images/emma (1).jpg" alt="">
+        <img src="images/adam (1).png" alt="">
       </span>
       <span>
         <h2>
