--- a/en.html
+++ b/en.html
@@ -29,7 +29,7 @@
     <button onclick="window.location.href='#our_programs'" class="btn">Our Programs</button>
     <button onclick="window.location.href='#upcoming_events'" class="btn">Upcoming Events</button>
     <button onclick="window.location.href='#membership_perks'" class="btn">Membership Perks</button>
-    <button onclick="window.location.href='#executive_board' " class="btn">Executive Board</button>
+    <!-- <button onclick="window.location.href='#executive_board' " class="btn">Executive Board</button> -->
     <button onclick="window.location.href='#social_medias'" class="btn">Social Medias</button>
     <a href="https://calendar.google.com/calendar/embed?src=fiuydsa%40gmail.com&ctz=America%2FNew_York"
       target="_blank"><button class="btn">Calendar</button></a>
@@ -138,7 +138,7 @@
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
     </div>
   </div>
-  <div id="executive_board">
+  <!-- <div id="executive_board">
     <h1 id="executive">EXECUTIVE BOARD</h1>
     <div id="adam">
       <span>
@@ -231,7 +231,7 @@
         <img src="images/josue.png" alt="">
       </span>
     </div>
-  </div>
+  </div> -->
   <div id="joinus2">
     <div class="join">
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
