--- a/es.html
+++ b/es.html
@@ -29,7 +29,7 @@
     <button onclick="window.location.href='#our_programs'" class="btn">Nuestros Programas</button>
     <button onclick="window.location.href='#upcoming_events'" class="btn">Próximos Eventos</button>
     <button onclick="window.location.href='#membership_perks'" class="btn">Beneficios de Membresía</button>
-    <button onclick="window.location.href='#executive_board' " class="btn">Junta Ejecutiva</button>
+    <!-- <button onclick="window.location.href='#executive_board' " class="btn">Junta Ejecutiva</button> -->
     <button onclick="window.location.href='#social_medias'" class="btn">Redes Sociales</button>
     <a href="https://calendar.google.com/calendar/embed?src=fiuydsa%40gmail.com&ctz=America%2FNew_York"
       target="_blank"><button class="btn">Calendario</button></a>
@@ -125,7 +125,7 @@
     </h2>
     <a href="https://forms.gle/qDGjbVYFWjB7yUfx9" target="_blank"><img id="real" src="images/gbm2.jpg" alt=""></a>
   </div>
-  <div id="membership_perks">
+  <!-- <div id="membership_perks">
     <h1 id="membership">
       BENEFICIOS DE MEMBRESIA
     </h1>
@@ -144,7 +144,7 @@
         <li>¡Vota por la película que se proyectará en "Film Fridays"!</li>
       </div><img id="film_fridays_logo" src="images/film fridays logo.jpg" alt="">
     </span>
-  </div>
+  </div> -->
   <div id="joinus3">
     <div class="join">
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON
