--- a/en.html
+++ b/en.html
@@ -232,11 +232,11 @@
       </span>
     </div>
   </div> -->
-  <div id="joinus2">
+  <!-- <div id="joinus2">
     <div class="join">
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
     </div>
-  </div>
+  </div> -->
   <div id="social_medias">
     <div id="social">
       <a href="https://instagram.com/ydsafiu" target="_blank">
