--- a/es.html
+++ b/es.html
@@ -125,7 +125,7 @@
     </h2>
     <a href="https://forms.gle/qDGjbVYFWjB7yUfx9" target="_blank"><img id="real" src="images/gbm2.jpg" alt=""></a>
   </div>
-  <!-- <div id="membership_perks">
+  <div id="membership_perks">
     <h1 id="membership">
       BENEFICIOS DE MEMBRESIA
     </h1>
@@ -144,14 +144,14 @@
         <li>¡Vota por la película que se proyectará en "Film Fridays"!</li>
       </div><img id="film_fridays_logo" src="images/film fridays logo.jpg" alt="">
     </span>
-  </div> -->
+  </div>
   <div id="joinus3">
     <div class="join">
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON
           NOSOTROS!</button></a>
     </div>
   </div>
-  <div id="executive_board">
+  <!-- <div id="executive_board">
     <h1 id="executive">JUNTA EJECUTIVA</h1>
     <div id="adam">
       <span>
@@ -244,13 +244,13 @@
         <img src="images/josue.png" alt="">
       </span>
     </div>
-  </div>
-  <div id="joinus2">
+  </div> -->
+  <!-- <div id="joinus2">
     <div class="join">
       <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">ÚNETE CON
           NOSOTROS!!</button></a>
     </div>
-  </div>
+  </div> -->
   <div id="social_medias">
     <div id="social">
       <a href="https://instagram.com/ydsafiu" target="_blank">
