--- a/es.html
+++ b/es.html
@@ -92,13 +92,13 @@
       NUESTROS PROGRAMAS
     </h1>
     <img src="images/spring2022 ig post1.jpg" alt="">
-    <div>"Film Fridays" es nuestro programa quincenal presentado por nuestro director de comunicaciones, Josue, donde
+    <div>"Film Fridays" es nuestro programa quincenal presentado por nuestro director de comunicaciones donde
       proyectamos una película con temas de izquierda y luego discutimos la película. Los eventos incluyen una breve
       presentación previa al espectáculo que proporciona contexto, así como una lente política para ver la película.
       ¡Únase con nosotros para votar la película que se proyectará!<br><br><br><br><br><br><br><br><br><br><br></div>
     <div>"In Conversation" es nuestro programa de educación política de curso intensivo mensual presentado por nuestro
       presidente
-      de Educación Política, Jacob-Alexander. Revisamos una pieza de literatura socialista, con el propósito de brindar
+      de Educación Política. Revisamos una pieza de literatura socialista, con el propósito de brindar
       una
       breve y comprensible introducción a la teoría política. Tomando la forma de un círculo socrático, abordaremos el
       tema a
@@ -109,9 +109,8 @@
       mutua; una
       forma de participación política en la que las personas asumen la responsabilidad de cuidarse unos a otros y de
       cambiar
-      las condiciones políticas. "Solidaridad, no caridad". Con el esfuerzo de nuestros copresidentes de ayuda mutua,
-      Emma y
-      Oscar ofrecen a los miembros la oportunidad de trabajar juntos durante el semestre para ayudar a otros a través de
+      las condiciones políticas. "Solidaridad, no caridad". Nuestros copresidentes de ayuda mutua ofrecen a los miembros
+      la oportunidad de trabajar juntos durante el semestre para ayudar a otros a través de
       alimentos, ropa y campañas médicas en asociación con Miami DSA y organizaciones afines, así como organizando
       participación en protestas y acción política directa. ¡Esperamos que se una con nosotros para ayudar a nuestra
       comunidad!</div>
