--- a/es.html
+++ b/es.html
@@ -122,7 +122,8 @@
     <h2 id="rsvp">
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
-    <a href="https://forms.gle/qDGjbVYFWjB7yUfx9" target="_blank"><img id="real" src="images/gbm2.jpg" alt=""></a>
+    <a href="https://forms.gle/5n5EMEhM1rax7Zjx9" target="_blank"><img id="real" src="images/graveFixed.jpg" alt=""></a>
+    <a href="https://forms.gle/oVjJFSTanTpixZ57A" target="_blank"><img id="gbm1" src="images/fixedIC2.jpg"></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
