--- a/en.html
+++ b/en.html
@@ -111,7 +111,8 @@
         Click Image to RSVP!
       </h2>
     </h1>
-    <a href="https://forms.gle/qDGjbVYFWjB7yUfx9" target="_blank"><img id="real" src="images/gbm2.jpg" alt=""></a>
+    <a href="https://forms.gle/5n5EMEhM1rax7Zjx9" target="_blank"><img id="real" src="images/graveFixed.jpg" alt=""></a>
+    <a href="https://forms.gle/oVjJFSTanTpixZ57A" target="_blank"><img id="gbm1" src="images/fixedIC2.jpg"></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
