--- a/es.html
+++ b/es.html
@@ -117,8 +117,8 @@
     <h2 id="rsvp">
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
-    <a href="https://forms.gle/5n5EMEhM1rax7Zjx9" target="_blank"><img id="real" src="images/graveFixed.jpg" alt=""></a>
-    <a href="https://forms.gle/oVjJFSTanTpixZ57A" target="_blank"><img id="gbm1" src="images/fixedIC2.jpg"></a>
+    <a href="https://forms.gle/7qbb75vgpFEu2CnZA" target="_blank"><img id="real" src="images/game.jpg" alt=""></a>
+    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="mix" src="images/manifesto.jpg"></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
