--- a/test.html
+++ b/test.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <link rel="stylesheet" href="test.css">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Instafeed on Your Website</title>
+  <style type="text/css">
+    a img {
+      width: 25%;
+    }
+  </style>
 </head>
+
 <body>
-  <H1>this is a test</H1>
-  <img src="images/ydsa_star.png" class="rotate" width="100" height="100">
+  <h1 style="text-align: center">Show Instagram Feed on your Website</h1>
+  <div id="instafeed-container"></div>
+
+
+
+  <script src="https://cdn.jsdelivr.net/gh/stevenschobert/instafeed.js@2.0.0rc1/src/instafeed.min.js"></script>
+  <script type="text/javascript">
+    var userFeed = new Instafeed({
+      get: 'user',
+      target: "instafeed-container",
+      resolution: 'low_resolution',
+      accessToken: 'IGQVJYU1R6THFTaFJNMHRuSFA5RTl6QWZA1RlBkeXJOT3BoMVBVV1lmNU9xWXB5R3BObzhySFE5QU8tVXBPM09lR29oY042Vi1WS1M0X1RNdThnQ3NkM3B5NzRMaVQ4T0lNRm9NNkJyYXg4N2RhbndOSAZDZD'
+    });
+    userFeed.run();
+  </script>
 </body>
+
 </html>
