--- a/en.html
+++ b/en.html
@@ -38,6 +38,7 @@
   <div class="join">
     <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
   </div>
+
   <div id="image_color">
     <div id="ig_name">
       <div class="iglogo">
@@ -107,7 +108,7 @@
       </h2>
     </h1>
     <a href="https://forms.gle/7qbb75vgpFEu2CnZA" target="_blank"><img id="real" src="images/game.jpg" alt=""></a>
-    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="mix" src="images/manifesto.jpg"></a>
+    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="mix" src="images/FINALIC.jpg"></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
