spanish manifesto fix

--- a/es.html
+++ b/es.html
@@ -118,7 +118,7 @@
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
     <a href="https://forms.gle/7qbb75vgpFEu2CnZA" target="_blank"><img id="real" src="images/game.jpg" alt=""></a>
-    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="mix" src="images/manifesto.jpg"></a>
+    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="mix" src="images/FINALIC.jpg"></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
