--- a/en.html
+++ b/en.html
@@ -107,8 +107,8 @@
         Click Image to RSVP!
       </h2>
     </h1>
-    <a href="https://forms.gle/7qbb75vgpFEu2CnZA" target="_blank"><img id="real" src="images/game.jpg" alt=""></a>
-    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="mix" src="images/FINALIC.jpg"></a>
+    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="real" src="images/FINALIC.jpg" alt=""></a>
+    <a href="https://forms.gle/Gbx5uT1vEayccsUQA" target="_blank"><img id="mix" src="images/no.jpg"></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
