--- a/es.html
+++ b/es.html
@@ -117,8 +117,8 @@
     <h2 id="rsvp">
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
-    <a href="https://forms.gle/7qbb75vgpFEu2CnZA" target="_blank"><img id="real" src="images/game.jpg" alt=""></a>
-    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="mix" src="images/FINALIC.jpg"></a>
+    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="real" src="images/FINALIC.jpg" alt=""></a>
+    <a href="https://forms.gle/Gbx5uT1vEayccsUQA" target="_blank"><img id="mix" src="images/no.jpg"></a>
   </div>
   <div id="membership_perks">
     <h1 id="membership">
