--- a/en.html
+++ b/en.html
@@ -38,7 +38,14 @@
   <div class="join">
     <a href="https://forms.gle/yAknTR4tM3VbDjJd9" target="_blank"><button class="joinus">JOIN US!</button></a>
   </div>
-
+  <!-- <div id="donate">
+    <h1>Considering donating to the Unionizing Starbucks Workers in Hialeah!</h1>
+    <script type="text/javascript" defer src="https://donorbox.org/install-popup-button.js">
+    </script>
+    <a class="dbox-donation-button"
+      style="background: #081e3f url(https://donorbox.org/images/red_logo.png) no-repeat 37px;"
+      href="https://donorbox.org hialeah-starbucks-workers-solidarity">Donate</a>
+  </div> -->
   <div id="image_color">
     <div id="ig_name">
       <div class="iglogo">
@@ -107,7 +114,7 @@
         Click Image to RSVP!
       </h2>
     </h1>
-    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="real" src="images/FINALIC.jpg" alt=""></a>
+    <!-- <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="real" src="images/FINALIC.jpg" alt=""></a> -->
     <a href="https://forms.gle/Gbx5uT1vEayccsUQA" target="_blank"><img id="mix" src="images/no.jpg"></a>
   </div>
   <div id="membership_perks">
