--- a/es.html
+++ b/es.html
@@ -117,7 +117,7 @@
     <h2 id="rsvp">
       ¡Haz clic en la imagen para confirmar tu asistencia!
     </h2>
-    <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="real" src="images/FINALIC.jpg" alt=""></a>
+    <!-- <a href="https://forms.gle/ja8QeovRYR6avGKv8" target="_blank"><img id="real" src="images/FINALIC.jpg" alt=""></a> -->
     <a href="https://forms.gle/Gbx5uT1vEayccsUQA" target="_blank"><img id="mix" src="images/no.jpg"></a>
   </div>
   <div id="membership_perks">
